--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Dynamic File Downloader</title>
+</head>
 <body>
-    <a href="file_url_1" download="file1">Download File 1</a>
-    <a href="file_url_2" download="file2">Download File 2</a>
-    <!-- Add more links as needed -->
-    <script>
-        document.querySelectorAll('a').forEach(link => link.click());
-    </script>
+    <script src="download_script.js"></script>
 </body>
 </html>
